# tgnews

./: .gitignore  CMakeLists.txt  Dockerfile  generate_meta.py
meta/: Feats.txt  news_model.logreg  site_en_lang.txt  site_other_lang.txt  site_ru_lang.txt
models/: news_en_model.logreg  news_ru_model.logreg
models/en/: news_en_model.logreg
models/ru/: news_ru_model.logreg
notebooks/: 00.CleanText.ipynb  01.DetectLangs.ipynb  02.IsNews.ipynb  03.GetClasses.ipynb  04.SelectEvents.ipynb
src/: .news_det.hpp.swo  .tgnews.cpp.swp  .utils.hpp.swp  \  common.h  debug.hpp  features.hpp  html_parse.hpp  io.hpp  langrec.hpp  logreg.hpp  news_categories.hpp  news_det.hpp  news_threads.hpp  news_top.hpp  tgnews.cpp  tokenize.hpp  typenames.hpp  utils.hpp
src/bigartm/: CMakeLists.txt
src/bigartm/src/artm/: messages.pb.cc  messages.pb.h
src/bigartm/src/artm/core/: internals.pb.cc  internals.pb.h
src/cld3/: CMakeLists.txt
src/cld3/cld3/cld_3/protos/: feature_extractor.pb.cc  sentence.pb.cc  task_spec.pb.cc
src/cld3/misc/: myprotobuf.cmake
src/json/: CMakeLists.txt
tests/news_det/: gt.json
utils/: dict2list.py  generate_meta.py  make_submission.sh  news_det.py  preproc_udpipe.py  split_langs.py  test.py
